2010-05-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* components/componentRegistry.js: disbabled
	""@inverse.ca/calendar/fburl-freebusy-provider;1" as it seems to
	cause a problem in certain configurations.

2010-04-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/sogo-connector/general/vcards.utils.js
	(_insertCardMethods.tel): we no longer loop around the whole list
	of types. Instead we search for certain known types and try to
	popupate the card accordingly.
	(_insertCardMethods.adr): we privilege the "HOME" type when the
	"WORK" type is not specified.

2010-04-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* js/CalDAVAclManager.js (_userAddressSetCallback): take
	identities with empty displayname into account. In JS, "" = false,
	therefore we need to test it against "null" to achieve this.

2010-03-24  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* chrome/content/sogo-connector/calendar/calendar-event-dialog.xul
	We correctly overlay the menuitem for the "confidential" label

2010-03-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/inverse-library/sogoWebDAV.js
	(onXMLRequestReadyStateChange): we check the content-type for
	"text/xml" or "application/xml" return types before requesting the
	"responseXML" member of the request object. We also check for a
	content-length > 0. This avoids a "no content found" error with
	empty responses.

2010-03-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* js/CalDAVAclManager.js (_initAccountMgr): it may happen that
	identities referenced in the account manager are ghost identities.
	We work-around this, at least for the moment, by explicitly
	removing those from the default account.

2010-02-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* js/CalDAVAclManager.js (onDAVQueryComplete:) ensure that the
	returned entries exists in the cache before deleting them, to
	avoid an exception.

2010-01-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
